# wordle

./: Cargo.toml  README.md
benches/: benches.rs
src/: lib.rs  main.rs  tests.rs
