[package]
name = "wordle"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
clearscreen = "4.0.1"
dashmap = "6.1.0"
itertools = "0.14.0"
lazy_static = "1.5.0"
rand = "0.9.0"
rayon = "1.10.0"
serde_json = "1.0.138"


[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benches"
harness = false
